Schalter/Drivers Totem/Setup_BK-C310(Normal)_EN V2.0/KIOSKDLL V1.17/KIOSKDLLDemo Souce/KIOSKDLLDEMO_VC/LoadDLL.h

typedef int ( __stdcall *KIOSK_S_PrintBmpInRAM)( HANDLE hPort, 
												 int nPortType,
												 int nID,     
												 int nOrgx,        
												 int nMode);
typedef int ( __stdcall * KIOSK_S_PrintBmpInFlash)( HANDLE hPort,
													 int nPortType,
													 int nID,         
													 int nOrgx,       
													 int nMode );
typedef int (__stdcall * KIOSK_S_PrintBarcode)(	 HANDLE hPort,
												 int nPortType,
												 char *pszBuffer,
												 int nOrgx,
												 int nType, 
												 int nWidth,
												 int nHeight,
												 int nHriFontType,
												 int nHriFontPosition,
												 int nBytesOfBuffer );
typedef int (__stdcall * KIOSK_P_SetAreaAndDirection)( HANDLE hPort,
													  int nPortType,
													  int nOrgx,        
													  int nOrgy,        
													  int nWidth,       
													  int nHeight,      
													  int nDirection );
typedef int ( __stdcall * KIOSK_P_Textout)(  HANDLE hPort,
											 int nPortType,  
											 char *pszData,     
											 int nOrgx, 
											 int nOrgy,          
											 int nWidthTimes,     
											 int nHeightTimes,    
											 int nFontType,       
											 int nFontStyle);
typedef int ( __stdcall * KIOSK_P_DownloadPrintBmp)( HANDLE hPort, 
													 int nPortType,
													 char *pszPath, 
													 int nTranslateMode, 
													 int nOrgx,   
													 int nOrgy,     
													 int nMode );
typedef int ( __stdcall * KIOSK_P_PrintBmpInRAM)( HANDLE hPort,
												 int nPortType,
												 int nID,         
												 int nOrgx,  
												 int nOrgy,     
												 int nMode);
typedef int ( __stdcall * KIOSK_P_PrintBmpInFlash)(	 HANDLE hPort,
													 int nPortType,
													 int nID,         
													 int nOrgx,  
													 int nOrgy,     
													 int nMode );
typedef int ( __stdcall * KIOSK_P_PrintBarcode)(HANDLE hPort,
												int nPortType,
												char *pszBuffer,
												int nOrgx,
												int nOrgy, 
												int nType, 
												int nWidth,
												int nHeight,
												int nHriFontType,
												int nHriFontPosition,
												int nBytesOfBuffer);
typedef int ( WINAPI * KIOSK_P_Print)( HANDLE hPort, int nPortType);
typedef int ( __stdcall * KIOSK_P_Clear)( HANDLE hPort, int nPortType);
typedef int ( __stdcall * KIOSK_S_TestPrint)( HANDLE hPort, int nPortType);
typedef int ( __stdcall * KIOSK_CountMode)( HANDLE hPort,
											int nPortType,
											int nBits,
											int nOrder,
											int nSBound,
											int nEBound,
											int nTimeSpace,
											int nCycTime,
											int nCount );
typedef int ( __stdcall * KIOSK_SetPrintFromStart)(	HANDLE hPort,int nPortType,int nMode );
typedef int ( __stdcall * KIOSK_SetRaster )( HANDLE hPort, int nPortType, char *pszBmpPath, int nTranslateMode, int nMode );
typedef int (__stdcall * KIOSK_P_Lineation)( HANDLE hPort,
											int nPortType,
											int nWidth,
											int nSHCoordinate,
											int nSVCoordinate,
											int nEHCoordinate,
											int nEVCoordinate );
typedef int ( __stdcall * KIOSK_BarcodeSetPDF417)(HANDLE hPort,
												int nPortType,
												char * pszBuffer,
												int nBytesOfBuffer,
												int nWidth, 
												int nHeight,
												int nColumns,
												int nLines,
												int nScaleH,
												int nScaleV,
												int nCorrectGrade );
typedef  int (__stdcall * KIOSK_SetChineseFont)(HANDLE hPort,
												int nPortType,
												char * pszBuffer,
												int nEnable,
												int nBigger,
												int nLSpacing,
												int nRSpacing,
												int nUnderLine );
typedef int ( __stdcall * KIOSK_SetPresenter)(	HANDLE hPort, int nPortType, int nMode, int nTime);
typedef int (__stdcall * KIOSK_SetBundler)( HANDLE hPort, int nPortType, int nMode, int nTime );
typedef int( __stdcall * KIOSK_SetBundlerInfo )( HANDLE hPort,int nPortType,int nMode );