Drivers Totem/Setup_BK-C310(Normal)_EN V2.0/KIOSKDLL V1.17/KIOSKDLLDemo Souce/KIOSKDLLDEMO_VB/KIOSKDLLFuncs.bas


'Print a bit map in RAM by specifying it's ID.
Public Declare Function KIOSK_S_PrintBmpInRAM Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal nPortType As Integer, ByVal nID As Integer, ByVal nOrgx As Integer, ByVal nMode As Integer) As Integer

'Print a bit map in Flash by specifying it's ID.
Public Declare Function KIOSK_S_PrintBmpInFlash Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal nPortType As Integer, ByVal nID As Integer, ByVal nOrgx As Integer, ByVal nMode As Integer) As Integer

'Print bar code at the specified location, with setting the bar code's parameters.
Public Declare Function KIOSK_S_PrintBarcode Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal nPortType As Integer, ByVal pszBuffer As String, ByVal nOrgx As Long, ByVal nType As Long, ByVal nWidth As Long, ByVal nHeight As Long, ByVal nHriFontType As Long, ByVal nHriFontPosition As Long, ByVal nBytesOfBuffer As Long) As Long

'Set the width of printing area and the direction.
Public Declare Function KIOSK_P_SetAreaAndDirection Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal nPortType As Integer, ByVal nOrgx As Integer, ByVal nOrgy As Integer, ByVal nWidth As Integer, ByVal nHeight As Integer, ByVal nDirection As Integer) As Integer

'Write one character string at the specified position.
Public Declare Function KIOSK_P_Textout Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal nPortType As Integer, ByVal pszData As String, ByVal nOrgx As Integer, ByVal nOrgy As Integer, ByVal nWidthTimes As Integer, ByVal nHeightTimes As Integer, ByVal nFontType As Integer, ByVal nFontStyle As Integer) As Integer

'Download a bit map and print it immediately at the specified position.
Public Declare Function KIOSK_P_DownloadPrintBmp Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal nPortType As Integer, pszPath As String, ByVal nTranslateMode As Integer, ByVal nOrgx As Integer, ByVal nOrgy As Integer, ByVal nMode As Integer) As Integer

'Print a bit map in RAM by specifying it's ID.
Public Declare Function KIOSK_P_PrintBmpInRAM Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal nPortType As Integer, ByVal nID As Integer, ByVal nOrgx As Integer, ByVal nOrgy As Integer, ByVal nMode As Integer) As Integer
 
'Print a bit map in Flash by specifying it's ID.
Public Declare Function KIOSK_P_PrintBmpInFlash Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal nPortType As Integer, ByVal nID As Integer, ByVal nOrgx As Integer, ByVal nOrgy As Integer, ByVal nMode As Integer) As Integer

'Print bar code at the specified location, with setting the bar code's parameters.
Public Declare Function KIOSK_P_PrintBarcode Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal nPortType As Integer, ByVal pszBuffer As String, ByVal nOrgx As Integer, ByVal nOrgy As Integer, ByVal nType As Integer, ByVal nWidth As Integer, ByVal nHeight As Integer, ByVal nHriFontType As Integer, ByVal nHriFontPosition As Integer, ByVal nBytesOfBuffer As Integer) As Integer

'Print data in page mode.
Public Declare Function KIOSK_P_Print Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal nPortType As Integer) As Integer

'Clear the buffer.
Public Declare Function KIOSK_P_Clear Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal nPortType As Integer) As Integer

'/*Special functions.*/
'Print the testing page.
Public Declare Function KIOSK_S_TestPrint Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal nPortType As Integer) As Integer

'Set the cout mode.
Public Declare Function KIOSK_CountMode Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal nPortType As Integer, ByVal nMode As Integer, ByVal nBits As Integer, ByVal nOrder As Integer, ByVal nSBound As Integer, ByVal nEBound As Integer, ByVal nSpace As Integer, ByVal nCycTime As Integer, ByVal nCount As Integer) As Integer

'Set the print position at the starting of line.
Public Declare Function KIOSK_SetPrintFromStart Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal nPortType As Integer, ByVal nMode As Integer) As Integer

'Print the raster.
Public Declare Function KIOSK_SetRaster Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal nPortType As Integer, pszBmpPath As String, ByVal nTranslateMode As Integer, ByVal nMode As Integer) As Integer

'Set the lineation.
Public Declare Function KIOSK_P_Lineation Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal nPortType As Integer, ByVal nWidth As Integer, ByVal nSVCoordinate As Integer, ByVal nEHCoordinate As Integer, ByVal nEVCoordinate As Integer) As Integer

'Set the 417 bar code.
Public Declare Function KIOSK_BarcodeSetPDF417 Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal nPortType As Integer, pszBuffer As String, ByVal nBytesOfBuffer As Integer, ByVal nWidth As Integer, ByVal nHeight As Integer, ByVal nColumns As Integer, ByVal nLines As Integer, ByVal nScaleH As Integer, ByVal nScaleV As Integer, ByVal nCorrectGrade As Integer) As Integer

'Set the chinese font.
Public Declare Function KIOSK_SetChineseFont Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal nPortType As Integer, pszBuffer As String, ByVal nBytesOfBuffer As Integer, ByVal nEnable As Integer, ByVal nBigger As Integer, ByVal nLSpacing As Integer, ByVal nRSpacing As Integer, ByVal nUnderLine As Integer) As Integer

'Set the presenter.
Public Declare Function KIOSK_SetPresenter Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal nPortType As Integer, ByVal nMode As Integer, ByVal nTime As Integer) As Integer

'Set the bundler.
Public Declare Function KIOSK_SetBundler Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal nPortType As Integer, ByVal nMode As Integer, ByVal nTime As Integer) As Integer

'Set the action of bundler.
Public Declare Function KIOSK_SetBundlerInfo Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal nPortType As Integer, ByVal nMode As Integer) As Integer



'Return Value
Public Const KIOSK_SUCCESS As Long = 1001

Public Const KIOSK_FAIL As Long = 1002

Public Const KIOSK_ERROR_INVALID_HANDLE As Long = 1101

Public Const KIOSK_ERROR_INVALID_PARAMETER As Long = 1102

Public Const KIOSK_ERROR_INVALID_PATH As Long = 1201

Public Const KIOSK_ERROR_NOT_BITMAP As Long = 1202

Public Const KIOSK_ERROR_NOT_MONO_BITMAP As Long = 1203

Public Const KIOSK_ERROR_BEYOND_AREA As Long = 1204

Public Const KIOSK_ERROR_FILE As Long = 1301

' ---------------------------------------------------------


Public Const KIOSK_COM_ONESTOPBIT As Long = &H0&
Public Const KIOSK_COM_TWOSTOPBITS As Long = &H1&

' ---------------------------------------------------------

Public Const KIOSK_COM_NOPARITY As Long = &H0&
Public Const KIOSK_COM_ODDPARITY As Long = &H1&
Public Const KIOSK_COM_EVENPARITY As Long = &H2&
Public Const KIOSK_COM_MARKPARITY As Long = &H3&
Public Const KIOSK_COM_SPACEPARITY As Long = &H4&

' ---------------------------------------------------------


Public Const KIOSK_COM_DTR_DSR As Long = &H0&

'---------------------------------------------------------

Public Const KIOSK_PRByVal_MODE_STANDARD As Long = &H0&
Public Const KIOSK_PRByVal_MODE_PAGE As Long = &H1&


'---------------------------------------------------------

Public Const KIOSK_PAPER_SERIAL As Long = &H0&
Public Const KIOSK_PAPER_SIGN As Long = &H1&

'---------------------------------------------------------

Public Const KIOSK_FONT_TYPE_STANDARD As Long = &H0&
Public Const KIOSK_FONT_TYPE_COMPRESSED As Long = &H1&
Public Const KIOSK_FONT_TYPE_UDC As Long = &H2&
Public Const KIOSK_FONT_TYPE_CHINESE As Long = &H3&

'---------------------------------------------------------

Public Const KIOSK_FONT_STYLE_NORMAL As Long = &H0&
Public Const KIOSK_FONT_STYLE_BOLD As Long = &H8&
Public Const KIOSK_FONT_STYLE_THIN_UNDERLINE As Long = &H80&
Public Const KIOSK_FONT_STYLE_THICK_UNDERLINE As Long = &H100&
Public Const KIOSK_FONT_STYLE_UPSIDEDOWN As Long = &H200&
Public Const KIOSK_FONT_STYLE_REVERSE As Long = &H400&
Public Const KIOSK_FONT_STYLE_CLOCKWISE_90 As Long = &H1000&

'---------------------------------------------------------

Public Const KIOSK_BITMAP_PRINT_NORMAL As Long = &H0&
Public Const KIOSK_BITMAP_PRINT_DOUBLE_WIDTH As Long = &H1&
Public Const KIOSK_BITMAP_PRINT_DOUBLE_HEIGHT As Long = &H2&
Public Const KIOSK_BITMAP_PRINT_QUADRUPLE As Long = &H3&
'---------------------------------------------------------

Public Const KIOSK_BITMAP_MODE_8SINGLE_DENSITY As Long = &H0&
Public Const KIOSK_BITMAP_MODE_8DOUBLE_DENSITY As Long = &H1&
Public Const KIOSK_BITMAP_MODE_24SINGLE_DENSITY As Long = &H20&
Public Const KIOSK_BITMAP_MODE_24DOUBLE_DENSITY As Long = &H21&
  
'--------------------------------------------------------

Public Const KIOSK_BITMAP_PRByVal_NORMAL As Long = &H0&
Public Const KIOSK_BITMAP_PRByVal_DOUBLE_WIDTH As Long = &H1&
Public Const KIOSK_BITMAP_PRByVal_DOUBLE_HEIGHT As Long = &H2&
Public Const KIOSK_BITMAP_PRByVal_QUADRUPLE As Long = &H3&

'--------------------------------------------------------

Public Const KIOSK_BARCODE_TYPE_UPC_A As Long = &H41&
Public Const KIOSK_BARCODE_TYPE_UPC_E As Long = &H42&
Public Const KIOSK_BARCODE_TYPE_JAN13 As Long = &H43&
Public Const KIOSK_BARCODE_TYPE_JAN8 As Long = &H44&
Public Const KIOSK_BARCODE_TYPE_CODE39 As Long = &H45&
Public Const KIOSK_BARCODE_TYPE_ITF As Long = &H46&
Public Const KIOSK_BARCODE_TYPE_CODEBAR As Long = &H47&
Public Const KIOSK_BARCODE_TYPE_CODE93 As Long = &H48&
Public Const KIOSK_BARCODE_TYPE_CODE128 As Long = &H49&

'---------------------------------------------------------

Public Const KIOSK_HRI_POSITION_NONE As Long = &H0&
Public Const KIOSK_HRI_POSITION_ABOVE As Long = &H1&
Public Const KIOSK_HRI_POSITION_BELOW As Long = &H2&
Public Const KIOSK_HRI_POSITION_BOTH As Long = &H3&

'---------------------------------------------------------

Public Const KIOSK_AREA_LEFT_TO_RIGHT As Long = &H0&
Public Const KIOSK_AREA_BOTTOM_TO_TOP As Long = &H1&
Public Const KIOSK_AREA_RIGHT_TO_LEFT As Long = &H2&
Public Const KIOSK_AREA_TOP_TO_BOTTOM As Long = &H3&

'---------------------------------------------------------
'Presenter
Public Const KIOSK_PRESENTER_Retraction_on As Long = &H0&
Public Const KIOSK_PRESENTER_Paper_Forward As Long = &H1&
Public Const KIOSK_PRESENTER_Paper_Hold As Long = &H2&

'---------------------------------------------------------
'Bundler
Public Const KIOSK_BUNDLER_Retract As Long = &H0&
Public Const KIOSK_BUNDLER_Present As Long = &H1&

'Print mode
Public Const KIOSK_PRINT_MODE_STANDARD    As Long = &H0&
Public Const KIOSK_PRINT_MODE_PAGE        As Long = &H1&
